--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     %meta{ :name => 'csrf-token', :content => '' }
     %meta{ :name => 'description', :content => 'A simple tool for storing usernames and passwords securely in the cloud. All of your account details are encrypted with a single master password making it easy to use different passwords for each site you visit.' }
     %meta{ :name => 'keywords', :content => 'passwords, password manager, host-proof encryption, master password, secure passwords, password generator' }
-    %title Passmaster - Encrypted Password Manager for Web and Mobile
+    %title{ 'data-i18n-html' => 'general.title' } Passmaster - Encrypted Password Manager for Web and Mobile
     = stylesheet_link_tag 'libraries'
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'libraries'
