--- a/app/views/layouts/updates.html.haml
+++ b/app/views/layouts/updates.html.haml
@@ -4,7 +4,7 @@
   %head
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
     %meta{ :name => 'viewport', :content => 'initial-scale=1.0, maximum-scale=1.0, user-scalable=no' }
-    %title Updates - Passmaster
+    %title= "#{I18n.t('updates.title')} - Passmaster"
     = stylesheet_link_tag 'libraries'
     = stylesheet_link_tag 'application'
 
