--- a/app/views/mailer/master_password_changed.html.haml
+++ b/app/views/mailer/master_password_changed.html.haml
@@ -1,16 +1,16 @@
-%p Hi,
+%p= I18n.t('mailers.hi')
 
-%p This is to confirm that you changed your Master Password. You'll need to use your new password to access your accounts from now on.
+%p= I18n.t('mailers.master_password_changed.body1')
 
-%p A backup of your accounts as they existed with the previous Master Password is attached to this message.
+%p= I18n.t('mailers.master_password_changed.body2')
 
 %p
-  Backups can be restored to any Passmaster account or viewed offline using the
+  = I18n.t('mailers.accounts_viewer_instructions')
   = succeed '.' do
-    %a{ :href => "#{root_url}#{ACCOUNTS_VIEWER_FILENAME}" } Accounts Viewer
+    %a{ :href => "#{root_url}#{ACCOUNTS_VIEWER_FILENAME}" }= I18n.t('mailers.accounts_viewer')
 
-%p{ :style => 'font-weight: bold;' } If you did not make any changes and this is a surprise to you, please contact support by replying to this email.
+%p{ :style => 'font-weight: bold;' }= I18n.t('mailers.unexpected_change')
 
-%p Thanks for using Passmaster!
+%p= I18n.t('mailers.thanks_passmaster')
 
 %p Reference ID: #{@user_id}
