--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -2,7 +2,7 @@
   .well
     %h3
       %i.icon.icon-passmaster
-      Updates
+      = I18n.t('updates.title')
 
     %h4.update-date 2023-12-30
     %ul
