--- a/app/views/application/_configure.html.haml
+++ b/app/views/application/_configure.html.haml
@@ -1,28 +1,28 @@
 #configure.container{ :style => 'display:none;' }
   .top-links
     .pull-left
-      %button.btn.btn-warning{ :type => 'button', 'data-logout' => 'true', :title => 'Logout' }
+      %button.btn.btn-warning{ :type => 'button', 'data-logout' => 'true', :title => 'Logout', 'data-i18n-title' => 'general.logout' }
         %i.icon-off.icon-white
     .clearfix
 
   .well
     %h2
-      Configure
+      %span{ 'data-i18n-html' => 'configure.configure' } Configure
       %small#configure_email_placeholder
 
     .pushed-down
-      %h4 Master Password
-      %p
-        The Master Password is the only password you will need to remember.
-        It is used to unlock the rest of your individual account passwords so it is important that this password is hard to guess.
-        It should be at least 8 characters long and contain a mixture and upper and lower-case letters as well as numbers and special characters.
+      %h4{ 'data-i18n-html' => 'general.master_password' } Master Password
+      %ul{ :style => 'list-style-position:inside;' }
+        %li{ 'data-i18n-html' => 'general.master_password_instructions1' } The Master Password is the only password you will need to remember.
+        %li{ 'data-i18n-html' => 'general.master_password_instructions2' } It is used to unlock the rest of your individual account passwords so it is important that this password is hard to guess.
+        %li{ 'data-i18n-html' => 'general.master_password_instructions3' } It should be at least 8 characters long and contain a mixture and upper and lower-case letters as well as numbers and special characters.
       .alert.alert-warning
-        %strong Warning:
-        It is extremely important that you remember this password as it CANNOT be recovered!
+        %strong{ 'data-i18n-html' => 'general.warning' } Warning:
+        %span{ 'data-i18n-html' => 'general.warning_master_password' } It is extremely important that you remember this password as it CANNOT be recovered!
       %form#configure_form
-        %p= password_field_tag(:passwd, '', :placeholder => 'Password', :class => 'input-xlarge', :id => 'configure_passwd', :required => true)
-        %p= password_field_tag(:passwd2, '', :placeholder => 'Confirm Password', :class => 'input-xlarge', :id => 'configure_passwd2', :required => true)
-        %p= submit_tag('Set Master Password', :class => 'btn btn-primary', :id => 'configure_btn', :data => { :disable_with => false })
+        %p= password_field_tag(:passwd, '', :placeholder => 'Password', 'data-i18n-placeholder' => 'general.password', :class => 'input-xlarge', :id => 'configure_passwd', :required => true)
+        %p= password_field_tag(:passwd2, '', :placeholder => 'Confirm Password', 'data-i18n-placeholder' => 'configure.confirm_password', :class => 'input-xlarge', :id => 'configure_passwd2', :required => true)
+        %p= submit_tag('Set Master Password', :class => 'btn btn-primary', :id => 'configure_btn', 'data-i18n-value' => 'general.set_master_password', :data => { :disable_with => false })
       = form_tag(users_path, :method => :put, :remote => true, :id => 'configure_hidden_form', :style => 'display:none;') do
         = hidden_field_tag(:new_api_key, '', :id => 'configure_hidden_new_api_key')
         = hidden_field_tag(:encrypted_data, '', :id => 'configure_hidden_encrypted_data')
