added the ability to delete accounts from the settings menu

--- a/app/views/application/_accounts.html.haml
+++ b/app/views/application/_accounts.html.haml
@@ -25,6 +25,9 @@
             %a#backup_accounts_link{ :href => '#' } Backup
           %li#restore_accounts_list_item{ :style => 'display:none;' }
             %a#restore_accounts_link{ :href => '#' } Restore
+          %li.divider
+          %li
+            %a#delete_account_link{ :href => '#' } Delete Account
     .clearfix
 
   .well
