--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2023-08-21
+    %ul
+      %li Added the ability to delete your Passmaster account from the settings menu.
+
     %h4.update-date 2023-07-05
     %ul
       %li Gem updates. No actual changes to the functionality of Passmaster.
