fixed tap to copy stopped working on iOS 17.2

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2023-12-14
+    %ul
+      %li Fixed tap to copy not working on iOS 17.2.
+
     %h4.update-date 2023-08-21
     %ul
       %li Added the ability to delete your Passmaster account from the settings menu.
