fix tap to copy on android

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,9 +4,13 @@
       %i.icon.icon-passmaster
       Updates
 
+    %h4.update-date 2023-12-30
+    %ul
+      %li Fixed tap to copy on Android.
+
     %h4.update-date 2023-12-14
     %ul
-      %li Fixed tap to copy not working on iOS 17.2.
+      %li Fixed tap to copy on iOS 17.2.
 
     %h4.update-date 2023-08-21
     %ul
