link to the accounts viewer html file in email rather than attaching it because gmail thinks it is a virus

--- a/app/views/mailer/account_deleted.html.haml
+++ b/app/views/mailer/account_deleted.html.haml
@@ -2,4 +2,9 @@
 
 %p Your Passmaster account has been deleted. Here's a final backup of your accounts.
 
+%p
+  Backups can be restored to any Passmaster account or viewed offline using the
+  = succeed '.' do
+    %a{ :href => "#{root_url}#{ACCOUNTS_VIEWER_FILENAME}", :download => true } Accounts Viewer
+
 %p Have a great day!
