--- a/app/views/mailer/email_changed.html.haml
+++ b/app/views/mailer/email_changed.html.haml
@@ -4,7 +4,12 @@
 
 %p A backup of your accounts at the time of change is attached to this message.
 
-%p If you did not make any changes and this is a surprise to you, please contact support by replying to this email.
+%p
+  Backups can be restored to any Passmaster account or viewed offline using the
+  = succeed '.' do
+    %a{ :href => "#{root_url}#{ACCOUNTS_VIEWER_FILENAME}", :download => true } Accounts Viewer
+
+%p{ :style => 'font-weight: bold;' } If you did not make any changes and this is a surprise to you, please contact support by replying to this email.
 
 %p Thanks for using Passmaster!
 
