--- a/app/views/mailer/auto_backup.html.haml
+++ b/app/views/mailer/auto_backup.html.haml
@@ -2,4 +2,9 @@
 
 %p Your accounts have been changed. Here's a backup of the most recent version.
 
+%p
+  Backups can be restored to any Passmaster account or viewed offline using the
+  = succeed '.' do
+    %a{ :href => "#{root_url}#{ACCOUNTS_VIEWER_FILENAME}", :download => true } Accounts Viewer
+
 %p Thanks for using Passmaster!
