remove unnecessary 'download' attribute from links in emails

--- a/app/views/mailer/email_changed.html.haml
+++ b/app/views/mailer/email_changed.html.haml
@@ -7,7 +7,7 @@
 %p
   Backups can be restored to any Passmaster account or viewed offline using the
   = succeed '.' do
-    %a{ :href => "#{root_url}#{ACCOUNTS_VIEWER_FILENAME}", :download => true } Accounts Viewer
+    %a{ :href => "#{root_url}#{ACCOUNTS_VIEWER_FILENAME}" } Accounts Viewer
 
 %p{ :style => 'font-weight: bold;' } If you did not make any changes and this is a surprise to you, please contact support by replying to this email.
 
