--- a/app/views/mailer/account_deleted.html.haml
+++ b/app/views/mailer/account_deleted.html.haml
@@ -5,6 +5,6 @@
 %p
   Backups can be restored to any Passmaster account or viewed offline using the
   = succeed '.' do
-    %a{ :href => "#{root_url}#{ACCOUNTS_VIEWER_FILENAME}", :download => true } Accounts Viewer
+    %a{ :href => "#{root_url}#{ACCOUNTS_VIEWER_FILENAME}" } Accounts Viewer
 
 %p Have a great day!
