add note to the updates page

--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,10 @@
       %i.icon.icon-passmaster
       = I18n.t('updates.title')
 
+    %h4.update-date 2024-02-20
+    %ul
+      %li Added internationalization support with support for Vietnamese.
+
     %h4.update-date 2023-12-30
     %ul
       %li Fixed tap to copy on Android.
