update the app icon (thanks Khushnood Qadir!)

--- a/app/assets/stylesheets/updates.css.scss
+++ b/app/assets/stylesheets/updates.css.scss
@@ -1,6 +1,6 @@
 #updates {
   .icon-passmaster {
-    background-image: url(image_path('combination-32.png'));
+    background-image: url(image_path('icon-32.png'));
     background-position: 0;
     width: 32px;
     height: 32px;
