--- a/app/views/layouts/updates.html.haml
+++ b/app/views/layouts/updates.html.haml
@@ -3,8 +3,10 @@
 %html
   %head
     %meta{ 'http-equiv' => 'Content-Type', :content => 'text/html; charset=utf-8' }
-    %meta{ :name => 'viewport', :content => 'initial-scale=1.0, maximum-scale=1.0, user-scalable=no' }
+    %meta{ :name => 'viewport', :content => 'width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no' }
     %title= "#{I18n.t('updates.title')} - Passmaster"
+    %link{ :rel => 'icon', :href => '/favicon.png' }
+    %link{ :rel => 'apple-touch-icon', :href => '/apple-touch-icon.png' }
     = stylesheet_link_tag 'libraries'
     = stylesheet_link_tag 'application'
 
